//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: January 27th 2025
    Features:
        - Display rocket capacity in item tooltips.
    Fixes:
        - Support PyHM without extra user interaction.
        - Fix missing icons of special recipes.
        - Propagate error state (null) through format expressions.

----------------------------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: January 20th 2025
    Features:
        - Apply productivity, speed, and consumption effects to recipes, and show them in tooltips.
    Fixes:
        - Building emission/absorption (pollution and spores) are displayed in tooltips again.
        - Fix a parsing error when using the deprecated data.extend API.
        - Fix text being too small on some Linux/X screens.
----------------------------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: December 30th 2024
    Features:
        - Added Ctrl+Shift+F to search all pages.
        - In the Link Summary panel tooltip, add information on where (in the table) each recipe can be found.
        - In the Link Summary panel, allow clicking on a recipe to inspect that recipe's links.
    Fixes:
        - "Map generated" entities that don't generate in any locations could break automation analysis.
        - Recipes that are referenced without being defined do not prevent YAFC from loading.
        - (SA) Tree seeds used by the agricultural tower no longer appear twice in the Dependency Explorer.
        - Milestone analysis got slower in 2.4.0; increase its speed.