@@ -6,6 +6,7 @@ dylib
 Factorio
 Floodfill
 foreach
+Fulgoran
 imgui
 Kovarex
 liblua
